Added JVM options to increase the maximum heap at 4GB and use Concurrent GC